# Text-to-SQL

./: .gitignore  Makefile  README.md  pyproject.toml
configs/serving/: vllm.yaml
configs/training/: base.yaml  sweep_lora_rank.yaml  sweep_lr.yaml
demo/: app.py
scripts/: benchmark_inference.py  evaluate.py  generate_charts.py  prepare_data.py  quantize.py  run_sweep.py  train.py
src/data/: analysis.py  download.py  format.py  preprocess.py  split.py
src/evaluation/: baseline.py  benchmark.py  error_analysis.py  metrics.py  sql_execution.py
src/optimization/: benchmark.py  export_gguf.py  quantize_awq.py  quantize_gptq.py
src/serving/: api.py  middleware.py  schemas.py
src/training/: callbacks.py  config.py  trainer.py
tests/: test_api.py  test_data_format.py  test_sql_execution.py
