[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-sql-finetune"
version = "0.1.0"
description = "Fine-tune a small LLM for Text-to-SQL and serve it efficiently"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Yash Deshpande" },
]

dependencies = [
    # HuggingFace ecosystem
    "transformers>=4.44.0",
    "peft>=0.12.0",
    "trl>=0.9.0",
    "datasets>=2.20.0",
    "accelerate>=0.33.0",
    "bitsandbytes>=0.43.0",
    "tokenizers>=0.19.0",

    # Experiment tracking
    "wandb>=0.17.0",

    # Quantization
    "auto-gptq>=0.7.0",
    "autoawq>=0.2.0",

    # Serving
    "vllm>=0.5.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",

    # Demo UI
    "gradio>=4.37.0",

    # Data & utilities
    "pandas>=2.2.0",
    "sqlglot>=25.0.0",
    "sqlparse>=0.5.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",

    # Config management
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

gguf = [
    "llama-cpp-python>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
